# nes-emulator

./: .lvimrc  CMakeLists.txt  README.md  notes  tags
.mypy_cache/3.7/: __future__.meta.json  _importlib_modulespec.meta.json  abc.meta.json  builtins.meta.json  codecs.meta.json  fix_6502_tests.data.json  fix_6502_tests.meta.json  io.meta.json  mmap.meta.json  posix.meta.json  sys.meta.json  types.meta.json  typing.meta.json
.mypy_cache/3.7/collections/: __init__.meta.json  abc.meta.json
.mypy_cache/3.7/importlib/: __init__.meta.json  abc.meta.json  machinery.meta.json  util.meta.json
.mypy_cache/3.7/os/: __init__.meta.json  path.meta.json
docs/: 6502opcodes.html  6502opcodes2.html  Marat-Fayzullin-docs.html  The Overflow (V) Flag Explained.html  Two's Complement.html  color-table.html  notes  y0shi-docs.html
docs/6502opcode2_files/: show_ads.js
docs/Marat-Fayzullin-docs_files/: Ad2.html
docs/y0shi-docs_files/: a.js  country.js  css.css  en.js  gamefaqs.js  jquery_gf.js  omniture_v2.js  s89092266633759  settings.js  simplejax.js  snthemes.js  v13.css
roms/: NEStress bad footprint.nes
scripts/: add_vim_config_comments.py  convert_hexdump.py  fix_6502_tests.py  fix_vim_config_comments.py  git-push.sh  grep-todo-and-fixme.sh  into_members.py  notary.py  replace-in-files.sh  requirements.txt  scrape_colors.py  scrape_instructions.py
scripts/asm6/: asm6
src/: cartridge.cpp  cartridge.h  cpu.cpp  cpu.h  instruction_set.cpp  joypad.cpp  joypad.h  joypads.cpp  joypads.h  main.cpp  mem.cpp  mem.h  mirroring.h  ppu.cpp  ppu.h  rendering.cpp  rendering.h  sdl++.cpp  sdl++.h  utils.cpp  utils.h
tests/: CMakeLists.txt  cartridge_tests.cpp  cpu_6502_tests.cpp  cpu_memory_tests.cpp  cpu_tests.cpp  joypad_tests.cpp  mem.h  memory_tests.cpp  ppu_tests.cpp  tests.cpp  utils_tests.cpp
tests/6502js/: assembler.js  index.html
(+23 files in other folders)
